Allow sending messages to vehicle drivers via web API
* Add an endpoint POST /vehicles/{NAME}/commAdapter/message, which
  allows sending messages to the communication adapter that is attached
  to a vehicle.
* Deprecate VehicleCommAdapter.processMessage(Object),
  VehicleCommAdapter.execute(AdapterCommads) and related code in favor
  of (the newly introduced)
  VehicleCommAdapter.processMessage(VehicleCommAdapterMessage), which
  provides a generic one-way communication channel to the comm adapter.

Merged-by: Stefan Walter <stefan.walter@iml.fraunhofer.de>
